<?xml version="1.0" encoding="utf-8"?>

<!-- Common prefix for view ID = fragment_select_account_ -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="io.tnmma.ezwallet.ui.screen.bottomsheet.selectaccount.SelectAccountViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/fragment_select_account_row_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_15"
            android:layout_marginTop="@dimen/spacing_15"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toTopOf="@id/fragment_select_account_label_from"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_select_account"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/fragment_select_account_button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_base_rectangle_corner_20_border_ripple"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:src="@drawable/icon_add"
                    app:tint="?android:textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/label_button_add"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_select_account_label_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_15"
            android:layout_marginTop="@dimen/spacing_15"
            android:text="@string/label_select_account_from"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:visibility="@{viewModel.transferTransaction ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/fragment_select_account_list_src"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_account_row_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_select_account_list_src"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_10"
            android:paddingHorizontal="@dimen/spacing_15"
            app:layout_constraintBottom_toTopOf="@id/fragment_select_account_label_to"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_account_label_from"
            app:layout_goneMarginBottom="@dimen/spacing_15"
            app:layout_goneMarginTop="@dimen/spacing_15" />

        <TextView
            android:id="@+id/fragment_select_account_label_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_15"
            android:layout_marginTop="@dimen/spacing_15"
            android:text="@string/label_select_account_to"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:visibility="@{viewModel.transferTransaction ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/fragment_select_account_list_dst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_account_list_src" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_select_account_list_dst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_15"
            android:layout_marginTop="@dimen/spacing_10"
            android:layout_marginBottom="@dimen/spacing_15"
            android:visibility="@{viewModel.transferTransaction ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@id/fragment_select_account_bottom_action"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_account_label_to" />

        <io.tnmma.ezwallet.ui.customview.BottomActionView
            android:id="@+id/fragment_select_account_bottom_action"
            bottomAction="@{viewModel.bottomAction}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_select_account_list_dst" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
